--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <!-- inicio Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cinzel&family=Noto+Serif+JP:wght@300&family=Playfair+Display+SC&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- boots -->
+    <link
+      rel="stylesheet"
+      href="https://formden.com/static/cdn/bootstrap-iso.css"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -42,12 +53,14 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" /> -->
-    <link rel="icon" type="image/png" href="img/sanid.jpg" />
+    <link rel="icon" type="image/png" href="img/chequeto.jpg" />
     <!-- ICON -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
