--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-- FONT AWESOME -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -32,11 +31,7 @@
       rel="stylesheet"
     />
 
-    <!-- boots -->
-    <link
-      rel="stylesheet"
-      href="https://formden.com/static/cdn/bootstrap-iso.css"
-    />
+    <!--  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -48,14 +43,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SANID</title>
-    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/img/sanid.jpg" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" /> -->
-    <link rel="icon" type="image/png" href="img/chequeto.jpg" />
     <!-- ICON -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/img/chequeto.jpg" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
