--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
     <title>SANID</title>
     <!-- ICON -->
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/img/chequeto.jpg" />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
